# colvert-minimal-project

./: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
colvert_app/: __init__.py
colvert_app/core/: config.py
colvert_app/core/auth/: __init__.py  jwt_bearer.py
colvert_app/core/exceptions/: __init__.py  custom_exceptions.py
colvert_app/handlers/: __init__.py  exception_handlers.py
colvert_app/routes/: __init__.py  example_routes.py
colvert_app/utils/: __init__.py  exception_registry.py
