[project]
name = "colvert-app"
version = "0.1.0"
description = "Minimal Template Project for Colvert"
authors = [
    {name = "Pere Oriol", email = "pere@colvert.ai"}
]
requires-python = ">=3.11.12,<3.12"
dynamic = ["dependencies"]

[tool.poetry.dependencies]
python = ">=3.11.12,<3.12"
colvert-models = "^0.1.33"
colvert-i18n = "^0.1.0"
pydantic-settings = "^2.1.0"
fastapi = "^0.115.12"
uvicorn = "^0.27.1"
PyJWT = "^2.8.0"

[tool.poetry.scripts]
main = "main:run_server"

[[tool.poetry.source]]
name = "colvert"
url = "https://pypi.colvert.ai/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
